# pdf-extraction

./: .env.example  .gitignore  README.md  canonical_taxonomy.py  extract_financials.py  pyproject.toml  requirements.txt
data/output/: observations.jsonl  run_log.jsonl  taxonomy_proposals.md
data/taxonomies/: README.md  _provenance.json  concept_canonical_map.json  concept_canonical_map.md  dei.txt  ifrs-full.txt  us-gaap.txt
examples/: AAPL_FY2024.facts.json
reference/: build_xbrl_json.py
scripts/: _apply_new_canonical_mappings.py  _finish_concept_map.py  build_concept_map.py  fetch_taxonomies.py
src/pdf_extraction/: __init__.py  __main__.py  cli.py  extractor.py  learn.py  prompt.py  run_log.py  taxonomy.py  xbrl_taxonomies.py
src/pdf_extraction/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
